eks-cluster-fargate/deployment-files/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: jjtech-pod
  namespace: default
  labels:
    app: myapp
    run: nginx
spec:
  containers:
  - name: myapp
    image: nginx
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    ports:
    - containerPort:  80
      name:  http
