eks-cluster-fargate/deployment-files/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: application
spec:
  type: "NodePort"
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32005
      protocol: TCP
  selector:
    run: app
